--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spec Card Generator</title>
+    <title>Info Card Generator</title>
   </head>
   <body class="bg-zinc-900 text-white">
     <div id="root"></div>
